# firmwareESP32

./: platformio.ini
lib/PN532_SRIX/: pn532_srix.h
src/core/: main_menu.cpp  main_menu.h  theme.cpp  theme.h
src/core/menu_items/: mikai.cpp  mikai.h
src/modules/libmikai-4.1.0/source/: CMakeLists.txt
src/modules/libmikai-4.1.0/source/include/: CMakeLists.txt
src/modules/libmikai-4.1.0/source/include/mikai/: CMakeLists.txt  leggi ora  mikai.h
src/modules/libmikai-4.1.0/source/src/: CMakeLists.txt  mikai-error.h  mikai-internal.h  mikai.c
src/modules/libmikai-4.1.0/source/src/mykey/: mykey.c
src/modules/libmikai-4.1.0/source/src/reader/: CMakeLists.txt  reader.c  reader.h
src/modules/libmikai-4.1.0/source/src/srix/: srix-flag.c  srix-flag.h  srix.c  srix.h
