# Include install folder
if (DEFINED INCLUDE_INSTALL_DIR)
    SET(includedir ${INCLUDE_INSTALL_DIR})
else (DEFINED INCLUDE_INSTALL_DIR)
    SET(INCLUDE_INSTALL_DIR include)
    SET(includedir ${CMAKE_INSTALL_PREFIX}/${INCLUDE_INSTALL_DIR})
endif (DEFINED INCLUDE_INSTALL_DIR)

# Install headers
FILE(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
INSTALL(FILES ${headers} DESTINATION ${INCLUDE_INSTALL_DIR}/mikai COMPONENT headers)